--- a/lizard/src/app/acercade/acercade.page.html
+++ b/lizard/src/app/acercade/acercade.page.html
@@ -3,13 +3,17 @@
     <ion-title class="fuentes-cards"><ion-icon name="happy-outline"></ion-icon> Acerca de</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<br>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">acercade</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-label class="fuentes-cards">Equipo Desarrollador</ion-label>
+  </ion-item>
+  <br>
+  <ion-list>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD01.png" style="width: 20%">     Genoveva Villablanca</ion-label></ion-item>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD02.png" style="width: 20%">     Wladimir Urzúa</ion-label></ion-item>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD03.png" style="width: 20%">     Félix Donoso</ion-label></ion-item>
+  </ion-list>  
 </ion-content>
 
 <ion-footer>
