--- a/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
+++ b/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
@@ -99,6 +99,6 @@
 
   <br>
 
-  <ion-button expand="full">Agregar libro</ion-button>
+  <ion-button expand="full" (click)="agregarItem()">Agregar libro</ion-button>
 
 </ion-content>
