--- a/lizard/src/app/replicasdearmas/replicasdearmas.page.html
+++ b/lizard/src/app/replicasdearmas/replicasdearmas.page.html
@@ -10,7 +10,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-      <ion-card>
+      <ion-card (click)="item()" >
         <img src="../../assets/img/ARMA02.png"/>
         <ion-card-header>
         <ion-card-title class="labels fuentes-cards">Tipo de Réplica</ion-card-title>
