--- a/lizard/src/app/itemfigura/itemfigura.page.html
+++ b/lizard/src/app/itemfigura/itemfigura.page.html
@@ -1,15 +1,87 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>itemfigura</ion-title>
+    <ion-title>Figura</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">itemfigura</ion-title>
+      <ion-title size="large">Figura</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Nombre de la figura</ion-label>
+    <ion-input readonly [(ngModel)]="figura.nombre" id="nombre" type="text" ></ion-input>
+    <ion-button (click)="cambiarEstadoEditable('nombre')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="link-outline"></ion-icon> Foto de la figura</ion-label>
+    <ion-input readonly [(ngModel)]="figura.url_foto" id="url_foto" type="text" ></ion-input>
+    <ion-button (click)="cambiarEstadoEditable('url_foto')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Tipo de figura</ion-label>
+    <ion-input readonly [(ngModel)]="figura.tipo" id="tipo" type="text" ></ion-input>
+    <ion-button (click)="cambiarEstadoEditable('tipo')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Descripción </ion-label>
+    <ion-input readonly [(ngModel)]="figura.descripcion" id="descripcion" type="text" ></ion-input>
+    <ion-button (click)="cambiarEstadoEditable('descripcion')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+  </ion-item>
+
+  <ion-item>
+    <ion-label class="labels"><ion-icon name="calendar-outline"></ion-icon>  Fecha adquisición</ion-label>
+    <ion-input readonly [(ngModel)]="figura.fecha_adquisicion" id="fecha_adquisicion" type="text" pattern="^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])$"></ion-input>
+    <ion-button (click)="cambiarEstadoEditable('fecha_adquisicion')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+  </ion-item>
+
+  <br>
+
+  <!-- inputs de datos especificos para una figura -->
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Origen </ion-label>
+    <ion-input readonly [(ngModel)]="figura.origen" type="text" ></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Tamaño de la figura </ion-label>
+    <ion-input readonly [(ngModel)]="figura.tamano" type="text" ></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Material </ion-label>
+    <ion-input readonly [(ngModel)]="figura.material" type="text" ></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Empresa </ion-label>
+    <ion-input readonly [(ngModel)]="figura.empresa" type="text" ></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-button (click)="actualizarItem()">Modificar</ion-button>
+  <ion-button (click)="eliminarItem()">Eliminar</ion-button>
+
 </ion-content>
 <ion-footer>
   <ion-toolbar>
