--- a/lizard/src/app/modal-crear-figura/modal-crear-figura.page.html
+++ b/lizard/src/app/modal-crear-figura/modal-crear-figura.page.html
@@ -78,6 +78,6 @@
 
   <br>
 
-  <ion-button expand="full">Agregar figura</ion-button>
+  <ion-button expand="full" (click)="agregarItem()">Agregar figura</ion-button>
 
 </ion-content>
