--- a/lizard/src/app/itemfigura/itemfigura.page.html
+++ b/lizard/src/app/itemfigura/itemfigura.page.html
@@ -1,6 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Figura</ion-title>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="3">
+          <img src="../../assets/img/FIGURA01.png" style="width: 50%;"/>
+        </ion-col>  
+        <ion-col size="9">
+          <ion-title>Figura</ion-title> 
+        </ion-col>
+      </ion-row>
+    </ion-grid>    
   </ion-toolbar>
 </ion-header>
 
@@ -10,6 +19,10 @@
       <ion-title size="large">Figura</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-item>
+    <img [src]="figura.url_foto" />
+  </ion-item>
 
   <ion-item>
     <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Nombre de la figura</ion-label>
@@ -85,8 +98,8 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-button [routerLink]="['/login']">Salir</ion-button>
-    <ion-button>B</ion-button>
-    <ion-button>C</ion-button>
+    <ion-button [routerLink]="['/login']"><ion-icon name="exit-outline"></ion-icon></ion-button>
+    <ion-button (click)="home()"><ion-icon name="home-outline"></ion-icon></ion-button>
+    <ion-button (click)="crearTarjeta()"><ion-icon name="id-card-outline"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-footer>
