feat: vista titulos y logros, acerca de

--- a/lizard/src/app/acercade/acercade.page.html
+++ b/lizard/src/app/acercade/acercade.page.html
@@ -13,7 +13,24 @@
     <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD01.png" style="width: 20%">     Genoveva Villablanca</ion-label></ion-item>
     <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD02.png" style="width: 20%">     Wladimir Urzúa</ion-label></ion-item>
     <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD03.png" style="width: 20%">     Félix Donoso</ion-label></ion-item>
-  </ion-list>  
+  </ion-list>
+  
+  <ion-card>
+    <ion-card-header>
+      <div style="text-align: center;">
+        <ion-card-title class="fuentes-cards">Reddit</ion-card-title>
+      </div>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <div style="text-align: center;">
+        <a href="https://www.reddit.com/r/lizardapp/" target="_blank">
+          <ion-button class="botones-footer" shape="round">CLICK AQUI</ion-button>
+        </a>
+      </div>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
 
 <ion-footer>
