--- a/lizard/src/app/titulosylogros/titulosylogros.page.html
+++ b/lizard/src/app/titulosylogros/titulosylogros.page.html
@@ -1,20 +1,70 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>titulosylogros</ion-title>
+    <ion-title class="fuentes-cards"><ion-icon name="ribbon-outline"></ion-icon> Títulos y Logros</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">titulosylogros</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid> 
+    <ion-row>
+      <ion-col size="12">
+        <ion-list>
+          <ion-item>
+            <ion-label>Novato</ion-label><ion-icon name="remove-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Aficionado</ion-label><ion-icon name="reorder-two-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label >Coleccionista</ion-label><ion-icon name="reorder-three-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Maestro</ion-label><ion-icon name="reorder-four-outline"></ion-icon>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+  <ion-grid> 
+    <ion-row>
+      <ion-col size="12">
+        <ion-list>
+          <ion-item>
+            <ion-label>OK !</ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Medio Enkokorado</ion-label><ion-icon name="heart-half-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Cultivando Colecciones</ion-label><ion-icon name="nutrition-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Brillamos!</ion-label><ion-icon name="sparkles-outline"></ion-icon>
+          </ion-item>
+          <ion-item>
+            <ion-label>Diamante Pulido</ion-label><ion-icon name="diamond-outline"></ion-icon>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>            
+
 </ion-content>
+
 <ion-footer>
-  <ion-toolbar>
-    <ion-button [routerLink]="['/login']">Salir</ion-button>
-    <ion-button>B</ion-button>
-    <ion-button>C</ion-button>
+  <ion-toolbar mode="ios" class="botones-footer">
+    <div style="text-align: center;">
+    <ion-button [routerLink]="['/login']">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/home']">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+  </div>
   </ion-toolbar>
 </ion-footer>
