feat: categoria replica de armas, flujo completo

--- a/lizard/src/app/modal-crear-arma/modal-crear-arma.page.html
+++ b/lizard/src/app/modal-crear-arma/modal-crear-arma.page.html
@@ -83,6 +83,6 @@
 
   <br>
 
-  <ion-button expand="full">Agregar arma</ion-button>
+  <ion-button expand="full" (click)="agregarItem()">Agregar arma</ion-button>
 
 </ion-content>
