--- a/lizard/src/app/replicasdearmas/replicasdearmas.page.html
+++ b/lizard/src/app/replicasdearmas/replicasdearmas.page.html
@@ -9,24 +9,18 @@
   <br>
   <ion-grid>
     <ion-row>
-      <ion-col size="6">
-      <ion-card (click)="item()" >
-        <img src="../../assets/img/ARMA02.png"/>
-        <ion-card-header>
-        <ion-card-title class="labels fuentes-cards">Tipo de Réplica</ion-card-title>
-        <ion-card-subtitle>Modelo de Réplica</ion-card-subtitle>
-        </ion-card-header>
-    
-        <ion-card-content>
-        Datos de Réplica
-        </ion-card-content>
-      </ion-card>
+      <ion-col size="6" *ngFor="let armas of armasUsuario">
+        <ion-card (click)="item(armas._id)">
+          <img [src]="armas.url_foto" />
+          <ion-card-header>
+            <ion-card-title class="labels fuentes-cards">{{ armas.nombre }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            {{ armas._id }}
+          </ion-card-content>
+        </ion-card>
       </ion-col>
-
-      <ion-col size="6">
-        <!--Si se quiere usar otra card, copiar la de arriba-->
-      </ion-col>
-    </ion-row> 
+    </ion-row>
   </ion-grid>
 
 </ion-content>
@@ -36,10 +30,10 @@
     <ion-button [routerLink]="['/login']">
       <ion-icon name="exit-outline"></ion-icon>
     </ion-button>
-    <ion-button [routerLink]="['/home']">
+    <ion-button  (click)="home()">
       <ion-icon name="home-outline"></ion-icon>
     </ion-button>
-    <ion-button [routerLink]="['/tarjeta']">
+    <ion-button (click)="crearTarjeta()">
       <ion-icon name="id-card-outline"></ion-icon>
     </ion-button>
   </div>
