--- a/lizard/src/app/titulosylogros/titulosylogros.page.html
+++ b/lizard/src/app/titulosylogros/titulosylogros.page.html
@@ -10,16 +10,16 @@
       <ion-col size="12">
         <ion-list>
           <ion-item>
-            <ion-label>Novato</ion-label><ion-icon name="remove-outline"></ion-icon>
+            <ion-label [style.color]="colorTextot1">Novato</ion-label><ion-icon name="remove-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Aficionado</ion-label><ion-icon name="reorder-two-outline"></ion-icon>
+            <ion-label [style.color]="colorTextot2">Aficionado</ion-label><ion-icon name="reorder-two-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label >Coleccionista</ion-label><ion-icon name="reorder-three-outline"></ion-icon>
+            <ion-label [style.color]="colorTextot3" >Coleccionista</ion-label><ion-icon name="reorder-three-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Maestro</ion-label><ion-icon name="reorder-four-outline"></ion-icon>
+            <ion-label [style.color]="colorTextot4">Maestro</ion-label><ion-icon name="reorder-four-outline"></ion-icon>
           </ion-item>
         </ion-list>
       </ion-col>
@@ -32,19 +32,19 @@
       <ion-col size="12">
         <ion-list>
           <ion-item>
-            <ion-label>OK !</ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol1">OK !</ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Medio Enkokorado</ion-label><ion-icon name="heart-half-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol2">Medio Enkokorado</ion-label><ion-icon name="heart-half-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Cultivando Colecciones</ion-label><ion-icon name="nutrition-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol3">Cultivando Colecciones</ion-label><ion-icon name="nutrition-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Brillamos!</ion-label><ion-icon name="sparkles-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol4">Brillamos!</ion-label><ion-icon name="sparkles-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label>Diamante Pulido</ion-label><ion-icon name="diamond-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol5">Diamante Pulido</ion-label><ion-icon name="diamond-outline"></ion-icon>
           </ion-item>
         </ion-list>
       </ion-col>
