--- a/lizard/src/app/modalpass/modalpass.page.html
+++ b/lizard/src/app/modalpass/modalpass.page.html
@@ -28,7 +28,7 @@
 
   <br>
 
-  <ion-button expand="full" (click)="resetearPass()">Resetear</ion-button>
-  <ion-button expand="full" [routerLink]="['/login']">Cancelar</ion-button>
+  <ion-button expand="full" (click)="resetearPass()" class="labels fuentes-cards boton-agregar" shape="round">Resetear</ion-button>
+  <ion-button expand="full" [routerLink]="['/login']" class="labels fuentes-cards boton-agregar" shape="round">Cancelar</ion-button>
 
 </ion-content>
