--- a/lizard/src/app/titulosylogros/titulosylogros.page.html
+++ b/lizard/src/app/titulosylogros/titulosylogros.page.html
@@ -32,19 +32,19 @@
       <ion-col size="12">
         <ion-list>
           <ion-item>
-            <ion-label [style.color]="colorTextol1">OK !</ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol1">OK !<br><h6>Consigue tu primera coleccion en una categoría</h6></ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label [style.color]="colorTextol2">Medio Enkokorado</ion-label><ion-icon name="heart-half-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol2">Medio Enkokorado<br><h6>Consigue 2 items en una categoría</h6></ion-label><ion-icon name="heart-half-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label [style.color]="colorTextol3">Cultivando Colecciones</ion-label><ion-icon name="nutrition-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol3">Cultivando Colecciones<br><h6>Consigue 5 items en una categoría</h6></ion-label><ion-icon name="nutrition-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label [style.color]="colorTextol4">Brillamos!</ion-label><ion-icon name="sparkles-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol4">Brillamos!<br><h6>Consigue 10 items en una categoría</h6></ion-label><ion-icon name="sparkles-outline"></ion-icon>
           </ion-item>
           <ion-item>
-            <ion-label [style.color]="colorTextol5">Diamante Pulido</ion-label><ion-icon name="diamond-outline"></ion-icon>
+            <ion-label [style.color]="colorTextol5">Diamante Pulido<br><h6>Consigue 20 o más items en una categoría</h6></ion-label><ion-icon name="diamond-outline"></ion-icon>
           </ion-item>
         </ion-list>
       </ion-col>
