--- a/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
+++ b/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Agregar nuevo libro a la colección
+      Agregar nuevo libro
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="cerrarModal()">
@@ -16,33 +16,33 @@
 <ion-content>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Nombre del libro</ion-label>
-    <ion-input [(ngModel)]="libro.nombre" type="text" placeholder="Nombre del libro"></ion-input>
+    <ion-label position="floating" class="labels">Nombre del libro</ion-label>
+    <ion-input [(ngModel)]="libro.nombre" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="link-outline"></ion-icon> Foto del libro</ion-label>
-    <ion-input [(ngModel)]="libro.url_foto" type="text" placeholder="www.google.com/image.png"></ion-input>
+    <ion-label position="floating" class="labels">Foto del libro</ion-label>
+    <ion-input [(ngModel)]="libro.url_foto" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Tipo de libro</ion-label>
-    <ion-input [(ngModel)]="libro.tipo" type="text" placeholder="ejemplo: "></ion-input>
+    <ion-label position="floating" class="labels">Tipo de libro</ion-label>
+    <ion-input [(ngModel)]="libro.tipo" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Descripción </ion-label>
-    <ion-input [(ngModel)]="libro.descripcion" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Descripción </ion-label>
+    <ion-input [(ngModel)]="libro.descripcion" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label class="labels"><ion-icon name="calendar-outline"></ion-icon>  Fecha adquisición</ion-label>
+    <ion-label class="labels">Fecha adquisición</ion-label>
     <ion-input [(ngModel)]="libro.fecha_adquisicion" type="date"></ion-input>
   </ion-item>
 
@@ -51,54 +51,54 @@
   <!-- inputs de datos especificos para un libro -->
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Autor </ion-label>
-    <ion-input [(ngModel)]="libro.autor" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Autor </ion-label>
+    <ion-input [(ngModel)]="libro.autor" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Editorial </ion-label>
-    <ion-input [(ngModel)]="libro.editorial" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Editorial </ion-label>
+    <ion-input [(ngModel)]="libro.editorial" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Genero </ion-label>
-    <ion-input [(ngModel)]="libro.genero" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Genero </ion-label>
+    <ion-input [(ngModel)]="libro.genero" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Edición </ion-label>
-    <ion-input [(ngModel)]="libro.edicion" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Edición </ion-label>
+    <ion-input [(ngModel)]="libro.edicion" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> ISBN </ion-label>
-    <ion-input [(ngModel)]="libro.isbn" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">ISBN </ion-label>
+    <ion-input [(ngModel)]="libro.isbn" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Paginas </ion-label>
-    <ion-input [(ngModel)]="libro.paginas" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Paginas </ion-label>
+    <ion-input [(ngModel)]="libro.paginas" type="text"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Año de publicación </ion-label>
-    <ion-input [(ngModel)]="libro.anio_publicacion" type="text" placeholder="Descripción del libro"></ion-input>
+    <ion-label position="floating" class="labels">Año de publicación </ion-label>
+    <ion-input [(ngModel)]="libro.anio_publicacion" type="text"></ion-input>
   </ion-item>
 
   <br>
 
-  <ion-button expand="full" (click)="agregarItem()">Agregar libro</ion-button>
+  <ion-button expand="full" class="labels fuentes-cards boton-agregar" shape="round" >Agregar Libro</ion-button>
 
 </ion-content>
