--- a/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
+++ b/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-title>
+      Tarjeta
+    </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="cerrarModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
