feat: vista top10

--- a/lizard/src/app/top10/top10.page.html
+++ b/lizard/src/app/top10/top10.page.html
@@ -1,3 +1,9 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title class="fuentes-cards" ><ion-icon name="podium-outline"></ion-icon> Top 10</ion-title>
+  </ion-toolbar>
+</ion-header>
+<br>
 <ion-content>
   <table>
     <thead>
@@ -21,9 +27,17 @@
   </table>
 </ion-content>
 <ion-footer>
-  <ion-toolbar>
-    <ion-button [routerLink]="['/login']">Salir</ion-button>
-    <ion-button>B</ion-button>
-    <ion-button>C</ion-button>
+  <ion-toolbar mode="ios" class="botones-footer">
+    <div style="text-align: center;">
+    <ion-button [routerLink]="['/login']">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/home']">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+  </div>
   </ion-toolbar>
 </ion-footer>
