fix: tamaño tabla top10

--- a/lizard/src/app/top10/top10.page.scss
+++ b/lizard/src/app/top10/top10.page.scss
@@ -12,7 +12,7 @@ ion-button {
 
 table {
     width: fit-content;
-    font-size: xx-small;
+    font-size: small;
     border-collapse: collapse;
     border: 1px solid;
 }
